--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 body {
     background-color: rgb(132, 132, 132);
 }
+h1 {
+    font-size: 50px;
+    color: rgb(255, 0, 0);
+    background-color: aliceblue;
+}
